# cilens

./: Cargo.toml  README.md  dist-workspace.toml  flake.nix
.cargo/: config.toml
.claude/agents/: rust-code-expert.md  unit-test-writer.md
.github/workflows/: lint.yml  test.yml
src/: auth.rs  cli.rs  error.rs  insights.rs  main.rs  models.rs
src/auth/: token.rs
src/providers/: gitlab.rs  mod.rs
src/providers/gitlab/: client.rs  clustering.rs  core.rs  critical_path.rs  job_analysis.rs  metrics.rs  mod.rs  pipeline_types.rs  provider.rs  type_metrics.rs  types.rs  url_utils.rs
src/providers/gitlab/client/: core.rs  graphql.rs  mod.rs  pipelines.graphql  pipelines.rs
src/providers/gitlab/provider/: core.rs  mod.rs  pipelines.rs
